fix word wrap for <code>

--- a/src/stylesheets/base/general.pcss
+++ b/src/stylesheets/base/general.pcss
@@ -3,4 +3,5 @@ code {
   display: block;
   padding: 10px;
   white-space: pre-wrap;
+  word-wrap: break-word;
 }
